--- a/project_name/static/css/style.sass
+++ b/project_name/static/css/style.sass
@@ -1,14 +1,19 @@
-@import 'lib/variables'
-@import 'lib/mixins'
-@import 'templates/header'
-@import 'templates/page'
-@import 'templates/footer'
-@import 'templates/search'
-@import 'partials/mfp'
-@import 'partials/pagination'
-@import 'templates/catalog'
-@import 'templates/error'
-@import 'vendor/slick'
+//Abstracts
+@import 'abstracts/_variables'
 
+//Font
+@import 'fonts/fonts'
 
+//Components
+@import 'components/btn'
 
+//Templates
+@import 'templates/default'
+@import 'templates/placeholder'
+
+//Layout
+@import 'layout/mfp'
+
+//Partials
+@import 'partials/header'
+@import 'partials/footer'
