--- a/project_name/templates/catalog/parts/block_cards.html
+++ b/project_name/templates/catalog/parts/block_cards.html
@@ -1,7 +1,7 @@
 {% load pagination_tags %}
 
 {% if object_list %}
-    <section class="page__block-cards">
+    <div>
         {% if products_title %}
             <h2>{{ products_title }}</h2>
         {% endif %}
@@ -10,7 +10,7 @@
         {% for obj in object_list %}
             {% include 'catalog/parts/card.html' %}
         {% endfor %}
-    </section>
+    </div>
 
     {% paginate %}
 
