--- a/project_name/templates/pages/breadcrumb.html
+++ b/project_name/templates/pages/breadcrumb.html
@@ -1,6 +1,9 @@
 {% load pages_tags %}
 {% for page in pages_navigation %}
     <a class="breadcrumbs__item" href="{{ page.get_absolute_url }}">
-        <span>{{ page.title }}</span>
+        {{ page.title }}
     </a>
+    <span class="breadcrumbs__item">
+        /
+    </span>
 {% endfor %}
