--- a/project_name/templates/catalog/root.html
+++ b/project_name/templates/catalog/root.html
@@ -2,20 +2,23 @@
 {% load base_tags %}
 
 {% block breadcrumbs %}
-    <a class="breadcrumbs__item" href="/"><span>Главная</span></a>
+    <a class="breadcrumbs__item" href="/">
+        Главная
+    </a>
+    <span class="breadcrumbs__item">
+        /
+    </span>
 {% endblock %}
-
-{% block article_selector %}catalog{% endblock %}
 
 {% block content %}
 
     {% show_block_content object.main_content %}
 
-    <section class="root">
+    <div>
         {% for obj in object.root_sections %}
             {% include 'catalog/parts/card.html' %}
         {% endfor %}
-    </section>
+    </div>
 
     {% show_block_content object.bottom_content %}
 
