--- a/project_name/templates/parts/block_favicon.html
+++ b/project_name/templates/parts/block_favicon.html
@@ -1,17 +1,16 @@
 {% load static %}
 
-<link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicons/apple-touch-icon.png' %}">
-<link rel="shortcut icon" href="{% static 'img/favicons/favicon.ico' %}">
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicons/favicon-16x16.png' %}">
-<link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicons/favicon-32x32.png' %}">
-<link rel="icon" type="image/png" sizes="192x192" href="{% static 'img/favicons/android-chrome-192x192.png' %}">
-<link rel="icon" type="image/png" sizes="512x512" href="{% static 'img/favicons/android-chrome-512x512.png' %}">
-<link rel="icon" type="image/png" sizes="256x256" href="{% static 'img/favicons/android-chrome-256x256.png' %}">
-<link rel="mask-icon" href="{% static 'img/favicons/safari-pinned-tab.svg' %}" color="#5bbad5">
-<link rel="manifest" href="{% static 'img/favicons/site.webmanifest' %}">
-<meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-70x70.png' %}">
-<meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-144x144.png' %}">
-<meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-150x150.png' %}">
-<meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-310x150.png' %}">
-<meta name="msapplication-TileImage" content="{% static 'img/favicons/mstile-310x310.png' %}">
-<meta name="msapplication-config" content="{% static 'img/favicons/browserconfig.xml' %}">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="shortcut icon" href="/favicon.svg">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileImage" content="/mstile-70x70.png">
+<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+<meta name="msapplication-TileImage" content="/mstile-150x150.png">
+<meta name="msapplication-TileImage" content="/mstile-310x150.png">
+<meta name="msapplication-TileImage" content="/mstile-310x310.png">
+<meta name="msapplication-config" content="/browserconfig.xml">
