--- a/project_name/static/css/fonts/fonts.sass
+++ b/project_name/static/css/fonts/fonts.sass
@@ -1,6 +1,6 @@
 @font-face
     font-family: 'Open Sans'
-    src: local('Open Sans Light'), local('OpenSans-Light'), url("../font/font.woff2") format('woff2')
-    font-weight: 300
+    src: local('Open Sans Regular'), local('OpenSans-Regular'), url("../fonts/opensans-regular.woff2") format('woff2')
+    font-weight: 400
     font-style: normal
     font-display: swap
