--- a/project_name/static/css/templates/default.sass
+++ b/project_name/static/css/templates/default.sass
@@ -2,7 +2,7 @@
 	box-sizing: border-box
 
 body
-	font-family: 'Arial', sans-serif
+	font-family: 'Open Sans', sans-serif
 	font-weight: 400
 	line-height: 1.5
 	font-size: 14px
